[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jules_tools"
version = "0.2.0"
authors = [
    {name = "Joe Marsh Rossney", email = "17361029+jmarshrossney@users.noreply.github.com"}
]
description = "A Python toolkit for working with the JULES land surface model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "f90nml>=1.4.5",
    "netcdf4>=1.7.2",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "xarray>=2025.7.1",
]

[project.optional-dependencies]
udocker = [
    "udocker>=1.3.17",
]
jupyter = [
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.ruff]
exclude = [
    ".venv",
    "tests",
]
line-length = 88
indent-width = 4
target-version = "py311"

# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402", "F401"]

[tool.jupytext]
formats = "ipynb,md"
